# daily-ai-insight-engine

./: .env.example  .gitignore  AI舆情分析日报系统_需求文档_v1.0.md  README.md  config.py  main.py  prompt.txt  prompt_analysis.txt  pyproject.toml  requirements.txt
data/raw/: hn_news.json  manual_chinese.json
docs/: all-prompts-catalog.md  architecture-overview.drawio  design_doc.html  design_doc.md  pipeline-9-steps.drawio  session-log-2026-04-15.md  xueqiu-issues.md
investment-sentiment-news/: SKILL.md
prompt/: daily_article_body.txt  investment_analysis.txt  侧边栏.txt
src/: analyzer.py  cleaner.py  cluster.py  daily_article_generator.py  extractor.py  investment_analyzer.py  schema.py  visualizer.py  web_report.py
src/collector/: chinese_media_collector.py  daily_store.py  hn_collector.py  registry.py  rss_collector.py  scheduler.py  social_collector.py
